cm4all-beng-proxy (0.8.11) unstable; urgency=low

  * delegate-client: fix SCM_RIGHTS check
  * use Linux 2.6 CLOEXEC/NONBLOCK flags
  * tcache: INVALIDATE removes all variants (error documents etc.)

 --

cm4all-beng-proxy (0.8.10) unstable; urgency=low

  * tcache: copy response.previous

 -- Max Kellermann <mk@cm4all.com>  Mon, 02 Aug 2010 18:03:43 +0200

cm4all-beng-proxy (0.8.9) unstable; urgency=low

  * (f?)cgi-handler: forward query string only if focused
  * ajp-handler: merge into proxy-handler
  * proxy-handler: forward query string if focused
  * cgi, fastcgi-handler: enable the resource cache
  * translation: add packets CHECK and PREVIOUS for authentication
  * python: add Response.max_age()

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Jul 2010 11:39:22 +0200

cm4all-beng-proxy (0.8.8) unstable; urgency=low

  * prototypes/translate.py: added new ticket-fastcgi programs
  * http-cache: implement FastCGI caching
  * merged release 0.7.47

 -- Max Kellermann <mk@cm4all.com>  Wed, 21 Jul 2010 13:00:43 +0200

cm4all-beng-proxy (0.8.7) unstable; urgency=low

  * istream-delayed: update the "direct" bit mask
  * http-client: send "Expect: 100-continue"
  * response, widget-http: apply istream_pipe to filter input
  * proxy-handler: apply istream_pipe to request body
  * istream-ajp-body: send larger request body packets
  * ajp-client: support splice()
  * merged release 0.7.46

 -- Max Kellermann <mk@cm4all.com>  Fri, 25 Jun 2010 18:52:04 +0200

cm4all-beng-proxy (0.8.6) unstable; urgency=low

  * translation: added support for custom error documents
  * response: convert HEAD to GET if filter follows
  * processor: short-circuit on HEAD request
  * python: depend on python-twisted-core

 -- Max Kellermann <mk@cm4all.com>  Wed, 16 Jun 2010 16:37:42 +0200

cm4all-beng-proxy (0.8.5) unstable; urgency=low

  * istream-tee: allow second output to block
  * widget-http: don't transform error documents