@@ -6,6 +6,7 @@
 
 import socket
 import struct
+from beng_proxy.control.protocol import *
 
 class Client:
     def __init__(self, host, port=5478):
@@ -25,3 +26,17 @@ class Client:
         header = struct.pack('>IHH', control_magic, length, command)
         padding = ' ' * (3 - ((length - 1) & 0x3))
         self._socket.send(header + payload + padding)
+
+    def send_tcache_invalidate(self, vary):
+        payload = ''
+        for command, value in vary.iteritems():
+            assert isinstance(command, int)
+            assert isinstance(value, str)
+
+            length = len(value)
+            assert length <= 0xffff
+            payload += struct.pack('>HH', length, command)
+            payload += value
+            payload += ' ' * (3 - ((length - 1) & 0x3))
+
+        self.send(CONTROL_TCACHE_INVALIDATE, payload)
