@@ -7,3 +7,4 @@
 control_magic = 0x63046101
 
 CONTROL_NOP = 0
+CONTROL_TCACHE_INVALIDATE = 1
